Corrected Executor